--- a/.env
+++ b/.env
@@ -16,6 +16,9 @@ DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
 DEEPSEEK_MODEL=deepseek-chat
 DEEPSEEK_TOKEN=5120
 
+# SandboxFusion地址
+CODE_EXECUTION_URL=http://localhost:8080
+
 # Embedding模型配置
 EMBEDDING_MODEL_NAME=BAAI/bge-large-zh-v1.5
 
