--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ DEEPSEEK_MODEL=deepseek-chat
 DEEPSEEK_TOKEN=5120
 
 # SandboxFusion地址
-CODE_EXECUTION_URL=http://localhost:8080
+SANDBOX_FUSION_URL=http://localhost:8080
 
 # Embedding模型配置
 EMBEDDING_MODEL_NAME=BAAI/bge-large-zh-v1.5
